--- a/Estate_App/templates/property_details.html
+++ b/Estate_App/templates/property_details.html
@@ -1,19 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ property.title }}</title>
-    <link rel="stylesheet" href="/static/css/dashboard.css">
-</head>
-<body>
-    <h2>{{ property.title }}</h2>
-    <img src="{{ property.image.url }}" alt="{{ property.title }}" width="300"><br>
-    <p><strong>Price:</strong> ${{ property.price }}</p>
-    <p><strong>Location:</strong> {{ property.location }}</p>
-    <p><strong>Description:</strong> {{ property.description }}</p>
-    <a href="{% url 'request_modification' property.id %}">Request Modification</a><br><br>
+{% extends 'user_base.html' %}  
+{% block content %}
 
-    <a href="{% url 'customer_dashboard' %}">Back to Dashboard</a>
-</body>
-</html>
+    <div class="property-container">
+        <div class="property-card">
+            <h2>{{ property.title }}</h2>
+            <img src="{{ property.image.url }}" alt="{{ property.title }}" width="300" style="border-radius: 8px;"><br>
+            <div class="property-details">
+                <p><strong>Property Id:</strong> {{ property.id }}</p>
+                <p><strong>Price:</strong> ${{ property.price }}</p>
+                <p><strong>Location:</strong> {{ property.location }}</p>
+                <p><strong>Description:</strong> {{ property.description }}</p>
+                <p><strong>Status:</strong> {{ property.status }}</p>
+                <p><strong>Dealer:</strong> {{ property.dealer.username }}</p>
+                <p><strong>Company:</strong> {{ property.dealer.dealer.company_name }}</p>
+                <p><strong>Contact:</strong> {{ property.dealer.dealer.phone }}</p>
+                {% if property.model_3d %}
+                    <p><strong>3D Model Available :</strong> <a href="{% url 'model_3d' property.id %}">3D Model</a></p>
+                {% else %}
+                    <p>3D Model not available for this property.</p>
+                {% endif %}
+                <br>
+                <a href="{% url 'request_modification' property.id %}" class="detail-btn">Request Modification</a>
+                <a href="{% url 'property_list' %}" class="detail-btn">Back to Properties</a>
+            </div>
+        </div>
+
+        {% block modification %}
+            {% comment %} {% include "request_modification.html" %} {% endcomment %}
+        {% endblock %}
+        
+
+    </div>
+
+{% endblock %}
