--- a/Estate_App/templates/dealer_manage_requests.html
+++ b/Estate_App/templates/dealer_manage_requests.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Modification Requests</title>
-    <link rel="stylesheet" href="/static/css/dashboard.css">
-</head>
-<body>
+{% extends 'user_base.html' %}  
+{% block content %}
+
     <h2>Manage Modification Requests</h2>
-    <ul>
+    <ul class="request-item">
         {% for request in requests %}
             <li>
                 <strong>{{ request.property.title }}</strong> - Requested by {{ request.customer.username }} <br>
@@ -27,5 +21,5 @@
             </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+
+{% endblock %}
