--- a/Estate_App/templates/admin_dealers.html
+++ b/Estate_App/templates/admin_dealers.html
@@ -4,6 +4,16 @@
 
 {% load static %}
 
+<style>
+    .action{
+        display:flex;
+        gap:10px;
+    }
+    #remove-btn:hover{
+        background-color: red;
+    }
+</style>
+
     <div class="container">
 
         <div class="row ">
@@ -20,7 +30,7 @@
                                         <th>Company Name</th>
                                         <th>Phone</th>
                                         <th>Email</th>
-                                        <th>Status</th>
+                                        <th>Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -31,8 +41,13 @@
                                         <td>{{ dealer.user.dealer.company_name }}</td>
                                         <td> {{ dealer.user.dealer.phone }} </td>
                                         <td> {{ dealer.user.email }} </td>
-                                        <td>
+                                        <td><div class="action">
                                             <div class="badge badge-outline-success">Approved</div>
+                                            <form method="POST" action="{% url 'remove_dealer' dealer.user.id %}">
+                                                {% csrf_token %}
+                                                <button type="submit" id="remove-btn" class="btn btn-success btn-sm" style="background-color:#d73d3d;border:1px solid #d73d3d">Remove</button>
+                                            </form>
+                                            </div>
                                         </td>
                                     </tr>     
                                     {% endfor %}                     
@@ -58,7 +73,7 @@
                                         <th>Company Name</th>
                                         <th>Phone</th>
                                         <th>Email</th>
-                                        <th>Status</th>
+                                        <th>Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -70,13 +85,18 @@
                                         <td>{{ dealer.user.dealer.company_name }}</td>
                                         <td> {{ dealer.user.dealer.phone }} </td>
                                         <td> {{ dealer.user.email }} </td>
-                                        <td>
+                                        <td><div class="action">
                                             {% if not engineer.is_approved %}
                                             <form method="POST" action="{% url 'approve_dealer' dealer.user.id %}">
                                                 {% csrf_token %}
                                                 <button type="submit" class="btn btn-success btn-sm">Approve</button> 
                                             </form>
+                                            <form method="POST" action="{% url 'remove_dealer' dealer.user.id %}">
+                                                {% csrf_token %}
+                                                <button type="submit" id="remove-btn" class="btn btn-success btn-sm" style="background-color:#d73d3d;border:1px solid #d73d3d">Remove</button>
+                                            </form>
                                             {% endif %}
+                                            </div>
                                         </td>
                                     </tr>     
                                     {% endfor %}   
