--- a/Estate_App/templates/admin_base.html
+++ b/Estate_App/templates/admin_base.html
@@ -129,6 +129,14 @@
               <span class="menu-title">CUSTOMER</span>
             </a>
           </li>
+          <li class="nav-item menu-items">
+            <a class="nav-link" href="/admin-properties">
+              <span class="menu-icon">
+                <i class="mdi mdi-chart-bar"></i>
+              </span>
+              <span class="menu-title">PROPERTIES</span>
+            </a>
+          </li>
           
              
             <div class="collapse" id="auth">
